# interview-items-api

./: .gitignore  INTERVIEW_PROCESS.md  README.md  interview-metadata.json  package-lock.json  package.json
algorithm-templates/: README.md
algorithm-templates/csharp/: README.md  SameStructureAs.cs  SameStructureAs.csproj  SameStructureAsTests.cs
algorithm-templates/go/: README.md  go.mod  same_structure_as.go  same_structure_as_test.go
algorithm-templates/java/: README.md  settings.gradle.kts
algorithm-templates/kotlin/: README.md  build.gradle.kts
algorithm-templates/kotlin/src/main/kotlin/: SameStructureAs.kt
algorithm-templates/kotlin/src/test/kotlin/: SameStructureAsTest.kt
algorithm-templates/python/: README.md  pyproject.toml  same_structure_as.py  test_same_structure_as.py
algorithm-templates/rust/: Cargo.toml  README.md
algorithm-templates/rust/src/: lib.rs
algorithm-templates/swift/: Package.swift  README.md
algorithm-templates/swift/Sources/SameStructureAs/: SameStructureAs.swift
algorithm-templates/swift/Tests/SameStructureAsTests/: SameStructureAsTests.swift
backend/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
backend/scripts/: benchmark-sameStructureAs.ts
backend/src/: app.ts  items.routes.test.ts  itemsData.ts  sameStructureAs.test.ts  sameStructureAs.ts  types.ts
backend/src/routes/: items.ts
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  ItemsPage.test.tsx  ItemsPage.tsx
frontend/src/api/: items.ts
scripts/: detect-environment.js
(+2 files in other folders)
