[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "same-structure-as"
version = "0.1.0"
description = "Algorithm template: same structure comparison"
requires-python = ">=3.9"
dependencies = [
  "pytest>=7",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
